# Nit-Picker

./: Readme.md  pyproject.toml
src/database/: __init__.py  redis.py
src/hackernews/: __init__.py  fetch_main_page_content.py
src/llm/: __init__.py  classifier.py
src/web_utils/: __init__.py  scraper.py
