[tool.poetry]
name = "nit-picker"
version = "0.1.0"
description = "Nit-Picker is a tool for providing you with hacker news top stories based on your preferences."
authors = ["MikaeelMF <mikaeelmayeli@gmail.com>"]
readme = "README.md"

# Specify the packages location
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
